# rmux

./: .gitattributes  Cargo.toml  README.fr.md  README.ja.md  README.md  README.zh-CN.md  rmux.1
crates/ratatui-rmux/: Cargo.toml  README.md
crates/ratatui-rmux/src/: lib.rs
crates/ratatui-rmux/tests/: budget.rs  ratatui_real_daemon_render_smoke.rs  ratatui_real_daemon_render_smoke_windows.rs
crates/rmux-client/: Cargo.toml
crates/rmux-client/src/: attach.rs  attach_unsupported.rs  attach_windows.rs  auto_start.rs  connection.rs  control_unsupported.rs  lib.rs  shell_quote.rs  upgrade.rs
crates/rmux-client/src/attach/: resize.rs  tests.rs
crates/rmux-client/src/attach_windows/: action.rs  metrics.rs  output.rs  shell_command.rs  stream.rs  stream_tests.rs  terminal.rs  terminal_tests.rs
crates/rmux-client/src/auto_start/: upgrade_restart.rs
crates/rmux-client/src/commands/: config.rs  server.rs  session.rs  window.rs
crates/rmux-client/src/connection/: tests.rs
crates/rmux-client/tests/: attach_session.rs  raw_terminal.rs  session_lifecycle.rs
crates/rmux-core/: Cargo.toml
crates/rmux-core/src/: command_queue.rs  environment.rs  grid.rs  hooks.rs  keys.rs  lib.rs  lifecycle.rs  options.rs  screen.rs  session.rs  terminal_passthrough.rs  terminal_screen.rs
crates/rmux-core/src/buffers/: tests.rs
crates/rmux-core/src/command_parser/: tests.rs
crates/rmux-core/src/environment/: tests.rs
crates/rmux-core/src/events/: coalescing.rs  mod.rs  ring.rs  wait.rs
crates/rmux-core/src/formats/: tests.rs
crates/rmux-core/src/grid/: cell.rs  history_bytes.rs
crates/rmux-core/src/hooks/: bindings.rs  rules.rs  tests.rs  types.rs
crates/rmux-core/src/identity/: mod.rs
crates/rmux-core/src/input/: dispatch.rs  mod.rs  passthrough.rs  tests.rs  writer.rs
crates/rmux-core/src/keys/: defaults.rs  store.rs  string_table.rs  tests.rs
crates/rmux-core/src/options/: access.rs  registry.rs  render.rs  scope.rs  show.rs  table.rs  tests.rs
crates/rmux-core/src/screen/: acs.rs  capture.rs  cell_nav.rs  history_bytes.rs  style_overlay.rs  tests.rs  writer.rs
crates/rmux-core/src/session/: accessors.rs  pane_transfer.rs  pane_transfer_cross.rs  pane_transfer_shared.rs  store.rs  target_error.rs  tests.rs  types.rs
crates/rmux-core/src/terminal/: mod.rs
crates/rmux-core/src/window/: layout_ops.rs
crates/rmux-ipc/: Cargo.toml  LICENSE-MIT
crates/rmux-ipc/src/: endpoint.rs  lib.rs  listener.rs  stream.rs
crates/rmux-os/: Cargo.toml  LICENSE-APACHE
crates/rmux-os/src/: daemon.rs  process_windows.rs
crates/rmux-proto/: Cargo.toml
crates/rmux-proto/src/: attach.rs  capabilities.rs  control.rs  error.rs  frame_kind.rs  lib.rs  request.rs  response.rs  types.rs
crates/rmux-proto/src/attach/: tests.rs
crates/rmux-proto/src/codec/: tests.rs
crates/rmux-proto/src/request/: buffer.rs  compat.rs  compat_tests.rs  layout.rs  pane.rs  server.rs  session.rs  show.rs  window.rs
crates/rmux-proto/src/response/: client.rs  keys.rs  options.rs  pane.rs  server.rs  session.rs  target.rs  window.rs
crates/rmux-proto/src/types/: hooks.rs  options.rs  tests.rs
crates/rmux-proto/tests/: wire_v1.rs
crates/rmux-pty/: Cargo.toml
crates/rmux-pty/examples/: conpty_spike.rs
crates/rmux-pty/src/: lib.rs  pty.rs  size.rs
crates/rmux-pty/src/backend/: linux.rs  macos.rs  mod.rs
crates/rmux-pty/tests/: pty_integration.rs  windows_conpty.rs
crates/rmux-pty/tests/windows_conpty/: job.rs
crates/rmux-sdk/: Cargo.toml  README.md
crates/rmux-sdk/examples/: assert_visible_text.rs  capture_region.rs  collect_until_exit.rs  discover_panes.rs  pane_events_stream.rs  quickstart.rs  quiet_state.rs  sdk_demo_create_session.rs  sdk_demo_line_stream.rs  sdk_demo_respawn_pane.rs  sdk_demo_run_detached.rs  terminal_playwright.rs  trace_terminal.rs  wait_for_text.rs
crates/rmux-sdk/examples/sdk_demo_helpers/: mod.rs
crates/rmux-sdk/examples/support/: terminal_example_fixture.rs
crates/rmux-sdk/src/: actions.rs  broadcast.rs  capabilities.rs  capture.rs  command.rs  diagnostics.rs  discovery.rs  ensure.rs  ensure_tests.rs  error.rs  events.rs  extract.rs  info.rs  layout.rs  lib.rs  load_state.rs  locator.rs  pane_set.rs  snapshot.rs  spec.rs  trace.rs  wait.rs
crates/rmux-sdk/src/ensure/: redaction.rs
crates/rmux-sdk/src/events/: render.rs  streams.rs  streams_contract_tests.rs  (+1 more)
crates/rmux-sdk/tests/: armed_wait.rs  contract.rs  discovery.rs  error_display.rs  events.rs  extract.rs  info.rs  layout_builder.rs  lifecycle.rs  pane_input.rs  pane_queries.rs  pane_set.rs  session.rs  smoke_v1_full.rs  smoke_v1_full_windows.rs  smoke_v1_windows.rs  snapshot.rs  streams.rs  terminal_automation.rs  value_objects.rs  wait.rs
crates/rmux-server/: Cargo.toml
crates/rmux-server/src/: control.rs  copy_mode.rs  daemon.rs  diagnostic_log.rs  format_runtime.rs  handler.rs  handler_alert_tests.rs  handler_alerts.rs  handler_attach.rs  handler_attach_tests.rs  handler_buffer_tests.rs  handler_capture_tests.rs  handler_client.rs  handler_client_environment.rs  handler_client_runtime.rs  handler_clock_mode_tests.rs  handler_config.rs  handler_control.rs  handler_control_lifecycle_tests.rs  handler_control_notification_tests.rs  handler_copy_mode.rs  handler_copy_mode_tests.rs  handler_daemon.rs  handler_dispatch.rs  handler_display_message_tests.rs  handler_environment_hook_tests.rs  handler_exited_outputs.rs  handler_hook_dispatch_tests.rs  handler_layout_tests.rs  handler_lifecycle.rs  handler_lock.rs  handler_overlay.rs  handler_overlay_tests.rs  handler_pane.rs  handler_pane_command_tests.rs  handler_pane_exit_format_tests.rs  handler_pane_pipe_tests.rs  handler_prompt.rs  handler_prompt_tests.rs  handler_scripting.rs  (+35 more)
crates/rmux-server/tests/: attach_session.rs  buffers.rs  capture.rs  formats.rs  hooks.rs  listing.rs  options_environment.rs  pane_management.rs  pane_transfer.rs  request_end_to_end.rs  scripting.rs  send_keys.rs  send_keys_windows.rs  session_crud.rs  status.rs  window_management.rs
crates/rmux-types/: Cargo.toml
crates/rmux-types/src/: lib.rs
(+291 files in other folders)
