[workspace]
members = [
    ".",
    "crates/rmux-types",
    "crates/rmux-proto",
    "crates/rmux-core",
    "crates/rmux-os",
    "crates/rmux-ipc",
    "crates/rmux-pty",
    "crates/rmux-client",
    "crates/rmux-server",
]
resolver = "2"

[workspace.package]
version = "3.9.2"
edition = "2021"
publish = false

[package]
name = "rmux"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
libc = "0.2"
rmux-client = { path = "crates/rmux-client" }
rmux-core = { path = "crates/rmux-core" }
rmux-os = { path = "crates/rmux-os" }
rmux-proto = { path = "crates/rmux-proto" }
# The root binary owns the hidden internal daemon mode, so it links the server
# and Tokio runtime directly for that top-level re-exec path.
rmux-server = { path = "crates/rmux-server" }
tokio = { version = "1.48.0", features = ["net", "rt", "rt-multi-thread", "time"] }

[dev-dependencies]
rmux-core = { path = "crates/rmux-core" }
rmux-pty = { path = "crates/rmux-pty" }
rmux-proto = { path = "crates/rmux-proto" }
rustix = { version = "1.1.4", features = ["event", "termios"] }

[[bin]]
name = "rmux"
path = "src/main.rs"
