[package]
name = "rmux-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rmux-core = { path = "../rmux-core" }
rmux-ipc = { path = "../rmux-ipc" }
rmux-proto = { path = "../rmux-proto", version = "0.1.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"
rmux-sdk = { path = "../rmux-sdk", version = "0.1.0" }
rustix = { version = "1.1.4", features = ["event", "net", "process", "runtime", "termios", "thread"] }
signal-hook = "0.3.18"
tokio = { version = "1.48.0", features = ["net", "rt", "time"] }

[target.'cfg(windows)'.dependencies]
rmux-sdk = { path = "../rmux-sdk", version = "0.1.0" }
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync", "time"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Pipes", "Win32_System_Threading"] }

[dev-dependencies]
rmux-pty = { path = "../rmux-pty" }
rmux-server = { path = "../rmux-server" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
