[package]
name = "rmux-core"
version = "0.3.1"
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Core session, pane, layout, format, hook, and buffer model for the RMUX terminal multiplexer."
keywords = ["terminal", "multiplexer", "core"]
categories = ["command-line-interface"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
regex = "1.12.2"
rmux-proto = { path = "../rmux-proto", version = "0.3.1" }
unicode-width = "0.1"
