[package]
name = "rmux-ipc"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
rmux-os = { path = "../rmux-os" }
tokio = { version = "1.48.0", features = ["net"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"
rustix = { version = "1.1.4", features = ["event", "net"] }
