[package]
name = "rmux-ipc"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Local IPC endpoint and transport primitives for the RMUX terminal multiplexer."
keywords = ["terminal", "multiplexer", "ipc"]
categories = ["asynchronous", "command-line-interface"]

[dependencies]
rmux-os = { path = "../rmux-os", version = "0.3.0" }
tokio = { version = "1.48.0", features = ["io-util", "net", "rt", "sync", "time"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"
rustix = { version = "1.1.4", features = ["event", "net"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_Threading"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
