[package]
name = "rmux-os"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Small OS abstraction layer used by RMUX IPC and terminal integrations."
keywords = ["terminal", "multiplexer", "os"]
categories = ["os", "command-line-interface"]

[dependencies]
rmux-types = { path = "../rmux-types", version = "0.3.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"
rustix = { version = "1.1.4", features = ["process", "termios"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Wdk_System_Threading",
] }
