[package]
name = "rmux-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RMUX detached IPC protocol DTOs, framing, and wire-safe error types."
publish = true

[dependencies]
bincode = "1.3.3"
rmux-types = { path = "../rmux-types", version = "0.0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
