[package]
name = "rmux-pty"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "PTY allocation, resize, and child-process control for the RMUX terminal multiplexer."
keywords = ["terminal", "multiplexer", "pty"]
categories = ["command-line-interface", "os"]

[dependencies]
rmux-types = { path = "../rmux-types", version = "0.3.0" }
tracing = "0.1.44"

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"
rmux-os = { path = "../rmux-os", version = "0.3.0" }
rustix = { version = "1.1.4", features = ["process", "termios", "pty", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.dev-dependencies]
tokio = { version = "1.52.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
