[package]
name = "rmux-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
glob = "0.3"
regex = "1.12.2"
rmux-core = { path = "../rmux-core" }
rmux-ipc = { path = "../rmux-ipc" }
rmux-os = { path = "../rmux-os" }
rmux-proto = { path = "../rmux-proto" }
rmux-pty = { path = "../rmux-pty" }
rustix = { version = "1.1.4", features = ["event", "fs", "net"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
rustix = { version = "1.1.4", features = ["event", "fs", "termios"] }
