[package]
name = "rmux-server"
version = "0.3.0"
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Tokio daemon and request dispatcher for the RMUX terminal multiplexer."
keywords = ["terminal", "multiplexer", "daemon"]
categories = ["command-line-interface"]

[dependencies]
async-recursion = "=1.1.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
glob = "0.3"
regex = "1.12.2"
rmux-core = { path = "../rmux-core", version = "0.3.0" }
rmux-ipc = { path = "../rmux-ipc", version = "0.3.0" }
rmux-os = { path = "../rmux-os", version = "0.3.0" }
rmux-proto = { path = "../rmux-proto", version = "0.3.0" }
rmux-pty = { path = "../rmux-pty", version = "0.3.0" }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["event", "fs", "net"] }
signal-hook = "0.3.18"

[dev-dependencies]
rustix = { version = "1.1.4", features = ["event", "fs", "termios"] }
